--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <noscript>You need to enable javascript to run this app.</noscript>
   <div id="root"></div>
-  <script type="module" src="/src/main.tsx" defer></script>
+  <script type="module" src="/src/main.tsx"></script>
 </body>
 
 </html>
