--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Business Card</title>
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="description"
+    content="We are company from Poland. Our business is providing best quality services, like bootcamp, courses, pair programming.">
+  <link rel="icon" type="image/png" href="./src/Assets/favicon.png">
+  <link rel="apple-touch-icon" href="./src/Assets/favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;700&display=swap" rel="preload"
     as="style">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;700&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" href="./src/Assets/favicon.png">
-  <link rel="apple-touch-icon" href="./src/Assets/favicon.png">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+
 </head>
 
 <body>
