--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="description"
     content="We are company from Poland. Our business is providing best quality services, like bootcamp, courses, pair programming.">
-  <link rel="icon" type="image/png" href="./src/Assets/favicon.png">
-  <link rel="apple-touch-icon" href="./src/Assets/favicon.png">
+  <link rel="icon" type="image/png" href="./src/assets/images/favicon.png">
+  <link rel="apple-touch-icon" href="./src/assets/images/favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;700&display=swap" rel="preload"
